--- a/views/page2.jade
+++ b/views/page2.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p You should see a Chargebee credit card entry component appear below.
 
   .ex2-fieldset(style="width:400px;")
     label.ex2-field
