--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    //- meta(name="turbo-visit-control" content="reload")
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='https://js.chargebee.com/v2/chargebee.js')
 
